--- a/conf/dataset/model_eval.yaml
+++ b/conf/dataset/model_eval.yaml
@@ -1,6 +1,7 @@
 path: ${root}/data/processed/model_eval_results.csv
-cols:
-  reference: 'target'
+
+cols:  # cols to be used when calculating BLEU
+  reference: target
   candidates:
     - transformer-en-ru
     - nnlb-1.3B-distilled
