--- a/conf/model/opus_distilled_en_ru.yaml
+++ b/conf/model/opus_distilled_en_ru.yaml
@@ -1,3 +1,4 @@
 name: opus-distilled-en-ru
 model_and_tokenizer_name: "under-tree/transformer-en-ru"
 output_dir: ${root}/models/${.name}/finetuned
+type: seq2seq
